--- a/ie/resource/style.css
+++ b/ie/resource/style.css
@@ -29,6 +29,14 @@ body {
     background:#fff;
 }
 
+#archived_warning {
+	width:100%;
+	height:50px;
+	font-size:30px;
+	line-height:50px;
+	text-align:center;
+	color:red;
+}
 #page {
     width:80%;
 	margin-left:10%;
