--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 				<div id="site-logo" class="col-sm-5 row navbar-header">
 					<div id="header-microsoft-logo">
 						<a id="home-link" href="http://msdn.microsoft.com/" tabindex="1" aria-label="Microsoft Developer">
-							<img id="header-microsoft-logo-svg" src="../resource/images/ms-logo-gray.png" alt="Microsoft logo">
+							<img id="header-microsoft-logo-svg" src="../resource/images/ms-logo-gray.svg" alt="Microsoft logo">
 							<span id="brand">
 								<span id="brand-separator">|</span>
 								<span id="brand-name"></span>
