--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
 <meta charset='UTF-8'>
-<link href='../resource/bootstrap.min.css' rel='Stylesheet' type='text/css' />
-<link href='../resource/style.css' rel='Stylesheet' type='text/css' />
+<link href='/resource/bootstrap.min.css' rel='Stylesheet' type='text/css' />
+<link href='/resource/style.css' rel='Stylesheet' type='text/css' />
 </head>
