--- a/_layouts/custom_footer.html
+++ b/_layouts/custom_footer.html
@@ -15,7 +15,7 @@
 				<div id="site-logo" class="col-sm-5 row navbar-header">
 					<div id="header-microsoft-logo">
 						<a id="home-link" href="http://msdn.microsoft.com/" tabindex="1" aria-label="Microsoft Developer">
-							<img id="header-microsoft-logo-svg" src="/resource/images/ms-logo-gray.svg" alt="Microsoft logo">
+							<img id="header-microsoft-logo-svg" src="../resource/images/ms-logo-gray.svg" alt="Microsoft logo">
 							<span id="brand">
 								<span id="brand-separator">|</span>
 								<span id="brand-name"></span>
@@ -55,6 +55,6 @@
 	</header>
     {{ content }}
     {% include foot.html %}
-
+<script type='text/javascript' src='resource/custom.js'></script>
 </body>
 </html>
