--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,2 +1,2 @@
-<script type='text/javascript' src='/resource/jquery-1.12.1.min.js'></script>
-<script type='text/javascript' src='/resource/replace.js'></script>
+<script type='text/javascript' src='/_includes/resource/jquery-1.12.1.min.js'></script>
+<script type='text/javascript' src='/_includes/resource/replace.js'></script>
